--- a/trunk/v2/patrodent/templates/contacto.html
+++ b/trunk/v2/patrodent/templates/contacto.html
@@ -28,12 +28,14 @@
     </script>
 {% endblock %}
 
+{% block class-contacto-link %}class="active"{% endblock %}
+
 {% block content %}
     <div class="main">
         <div class="container_24">
             <div class="grid_24">
                 <div class="top-pad">
-                    <div class="content-inner">                        	
+                    <div class="content-inner">
                         <div class="wrapper">
                             <div class="alpha prefix_1 grid_14">
                                 <div class="border-1">
