--- a/trunk/v2/patrodent/templates/quienes_somos.html
+++ b/trunk/v2/patrodent/templates/quienes_somos.html
@@ -43,9 +43,9 @@
                                     <h3 class="margin-bot">Director’s Greeting</h3>
                                     <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/patrocinio.jpg" alt="" /></figure>
                                     <div class="clear"></div>
-                                    <blockquote>Donec acumsan malesuada orcidon sitmet erolorem isum dolor amet adipiscg maurise phartra magn msa. Malesuada orcdonec umet lorem. Doloronsec tetuer malesg elit muris sifer mentum.</blockquote>
-                                    <p class="color-3 it p1">Tellus dolor, dapibus eget, elrenu mi. Unean aucto wisi eturna. Aliqua olutpat. Duis turpis...”</p>
-                                    <div class="sign p7">Patrocinio Gomez</div>
+                                    <blockquote>La experiencia y profesionalidad que nos avalan durante más 25 años implica un alto grado de formación que tiene como resultado tratamientos de alta calidad junto con una atención personalizada, de confianza y garantía.</blockquote>
+                                    <p class="color-3 it p1">Nuestro personal está altamente cualificado y de experiencia...”</p>
+                                    <div class="sign p7">Patrocinio Gomez Martinez</div>
                                 </div>
                             </div>
                             <div class="grid_15 suffix_1 omega">
