--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -14,16 +14,16 @@
             <div class="alpha prefix_1 grid_9">
                 <h2>Clínica Dental Patrodent</h2>
                 <h6 class="p2">Bienvenidos a tu clinica</h6>
-                <p class="text-1">
+                <p class="text-1 text-left-index">
                     La clínica dental de la Dra. Patrocinio Gómez Martínez es una consulta de odontología integral, que le permitirá resolver todos los problemas de salud y estética buco dental de una manera sencilla cómoda y eficaz.
                 </p>
-                <p class="text-1">
+                <p class="text-1 text-left-index">
                     Te ofrecemos todas las especialidades de la odontología moderna: Odontología conservadora y preventiva, ortodoncia, periodoncia, endodoncia,  prótesis, estética dental, blanqueamiento, cirugía e implantología, odontopediatría y radiología digital. 
                 </p>
-                <p class="text-1">
+                <p class="text-1 text-left-index">
                     Ven y confía en nosotros
                 </p>
-                <a class="sign" href="index-1.html">Patrocinio Gomez Martinez</a>
+                <p class="sign">Patrocinio Gomez Martinez</p>
             </div>
             <div class="grid_14 omega">
                 <div class="slider-wrapper">
