--- a/v2/patrodent/templates/formulario_contacto.html
+++ b/v2/patrodent/templates/formulario_contacto.html
@@ -79,7 +79,7 @@ document.write(unescape("%3Cscript src='" + cfJsHost + "www.123contactform.com/i
             <div class="currentPage1 currentPageActive" id="row3">
                 <div class="rowleft" style="text-align:left; ">
                     <label class="class123-label class123-fieldname fontbold  requiredfield " for="id123-control1735481" id="id123-title1735481">
-                        Mensaje:
+                        Consulta:
                     </label>
                 </div>
                 <div align="left" class="rowright" style="">
