--- a/v2/patrodent/templates/base.html
+++ b/v2/patrodent/templates/base.html
@@ -92,7 +92,14 @@
                                     </ul>
                                 </li>
                                 <li><a href="{% url template_view "antes_y_despues" %}" {% block class-antes-despues-link %}{% endblock %}>Antes y despues</a></li>
-                                <li><a href="{% url template_view "contacto" %}" {% block class-contacto-link %}{% endblock %}>Contacto</a></li>
+                                <li>
+                                    <a href="{% url template_view "contacto" %}" {% block class-contacto-link %}{% endblock %}>Contacto</a>
+                                    <ul>
+                                        <li>
+                                            <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
+                                        </li>
+                                    </ul>
+                                </li>
 
                             </ul>
                         </nav>
@@ -170,6 +177,7 @@
                                     <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
                                     <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                                     <dd><span>Teléfono:</span>954 21 12 44</dd>
+                                    <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                                 </dl>
                             </div>
                         </div>
