--- a/v2/patrodent/templates/ortodoncia.html
+++ b/v2/patrodent/templates/ortodoncia.html
@@ -22,17 +22,17 @@
 
 {% block before-after %}
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_1.jpg" alt="Ortodoncia Cesar Palomo" title="Ortodoncia Cesar Palomo" class="after" />
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_1.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
             <span class="afterBeforeText">Después</span>
         </figure>
     </div>
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_2.jpg" alt="Ortodoncia María Ponce" title="Ortodoncia María Ponce" class="after" />
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_2.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
             <span class="afterBeforeText">Después</span>
         </figure>
     </div>
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_3.jpg" alt="Ortodoncia Cristina Gomez" title="Ortodoncia Cristina Gomez" class="after" />
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_3.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
             <span class="afterBeforeText">Después</span>
         </figure>
     </div>
